--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li><a href="#about">About</a></li>
             <li><a href="#experience">Experiance</a></li>
             <li><a href="#projects">Projects</a></li>
-            <li><a href="#contacts">Contact</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
     </div>
 </nav>
@@ -55,7 +55,7 @@
         </div>
         <div id="socials-container">
             <img src="./assets/linkedin.png" alt="My linkedin profile"
-            class="icon" onclick="location.href='https://linkedin.com'"/>
+            class="icon" onclick="location.href='https://www.linkedin.com/in/sohelahmad-maniyar-68b1911aa'"/>
             <img src="./assets/github.png" alt="My github profile"
             class="icon" onclick="location.href='https://Github.com'"/>
 
@@ -105,7 +105,7 @@
                 <div class="article-container">
                     <article>
                         <img src="./assets/checkmark.png" alt="Experiance icon"
-                        class="icon">
+                        class="icon"/>
                         <div>
                             <h3>HTML</h3>
                             <p>Intermediate</p>
@@ -113,7 +113,7 @@
                     </article>
                     <article>
                         <img src="./assets/checkmark.png" alt="Experiance icon"
-                        class="icon">
+                        class="icon"/>
                         <div>
                             <h3>CSS</h3>
                             <p>Intermediate</p>
@@ -121,7 +121,7 @@
                     </article>
                     <article>
                         <img src="./assets/checkmark.png" alt="Experiance icon"
-                        class="icon">
+                        class="icon"/>
                         <div>
                             <h3>JavaScript</h3>
                             <p>Intermediate</p>
@@ -129,10 +129,10 @@
                     </article>
                     <article>
                         <img src="./assets/checkmark.png" alt="Experiance icon"
-                        class="icon">
+                        class="icon"/>
                         <div>
                             <h3>React</h3>
-                            <p>Basic</p>
+                            <p>Intermediate</p>
                         </div>
                     </article>
                 </div>
@@ -169,7 +169,7 @@
                         class="icon">
                         <div>
                             <h3>MySQL</h3>
-                            <p>Basic</p>
+                            <p>Intermediate</p>
                         </div>
                     </article>
                     <article>
@@ -203,12 +203,12 @@
             <div class="article-container">
                 <img src="./assets/project-1.png" alt="Project 1" class="project-img">
             </div>
-            <h2 class="experience-sub-title project-title">Project one</h2>
+            <h2 class="experience-sub-title project-title">Smart Contact Manager</h2>
             <div class="btn-container">
-                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/sohel-samm/contact_manager'">
                     GitHub
                 </button>
-                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+                <button class="btn btn-color-2 project-btn" onclick="location.href='https://contact-manager-bz8f.onrender.com'">
                     Live demo
                 </button>
             </div>
@@ -257,7 +257,7 @@
         </div>
         <div class="contact-info-container">
             <img src="./assets/linkedin.png" alt="LinkedIn icon" class="icon contact-icon">
-            <p><a href="https://www.linkedin.com">LinkedIn</a></p>
+            <p><a href="https://www.linkedin.com/in/sohelahmad-maniyar-68b1911aa">LinkedIn</a></p>
         </div>
     </div>
 </section>
